--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
-<app-employeeform></app-employeeform>
+<!-- <app-employeeform></app-employeeform>
 
-<app-employeelist></app-employeelist>
+<app-employeelist></app-employeelist> -->
+<div>
+    {{title}}
+
+
+<a routerLink="/createAccount">Account</a>
+
+
+<a routerLink="/createAtm">Atm</a> 
+
+<a routerLink="/transfer">Transfer</a> 
+</div>
+<router-outlet></router-outlet>
