--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,5 @@
 <!-- <app-employeeform></app-employeeform>
 
 <app-employeelist></app-employeelist> -->
-<div>
-    {{title}}
 
-
-<a routerLink="/createAccount">Account</a>
-
-
-<a routerLink="/createAtm">Atm</a> 
-
-<a routerLink="/transfer">Transfer</a> 
-</div>
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
