--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -22,5 +22,6 @@
   <input type="text" name="balance" [(ngModel)]="account.balance">
 </div>
 
-<button type="submit" class="btn btn-primary" (click)="createAccount()">Create Account</button>
+<app-address #custaddress></app-address>
+<button type="submit" class="btn btn-primary" (click)="createAccount(custaddress)">Create Account</button>
 </div>
